--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ html{
 
 
 .intro{    
-    background: url('/img/header-img.jpg');
-    background-size: 100%;
+    background: url(../img/header-img.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
@@ -176,6 +176,7 @@ html{
 .price-img img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .containerTestimo{
